# llamac_research

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: PPG_STRICT_STREAMING_EMOTION_CLASSIFICATION_GOAL.ko.md  REPRODUCIBILITY.md  RESULTS.md  ppg-r2-experiment-report.html
notebooks/: 00_llamac_dataset_labmeeting_colab.ipynb  00_llamac_dataset_professor_colab.ipynb  01_llamac_eda.ipynb  02_lightgbm_baselines.ipynb  02_lightgbm_baselines_short_colab.ipynb  02_reproduce_lightgbm_ppg_optuna.ipynb  03_ppg_alternative_models_optuna.ipynb  03_ppg_alternative_models_optuna_short_colab.ipynb  LLaMAC_PPG_Coherent_Split_R2_Search.ipynb  LLaMAC_PPG_Emotion_Prediction.ipynb  LLaMAC_PPG_R2_Regression_Model.ipynb
scripts/: build_features.py  download_llamac.py  evaluate_ppg_strict_emotion_search.py  summarize_results.py  train_model.py  train_ppg_waveform_emotion.py  tune_models.py
src/llamac_research/: __init__.py  device.py  features.py  labels.py  metrics.py  modeling.py  tuning.py  waveform_dnn.py
tests/: test_features.py  test_labels.py  test_metrics.py  test_modeling.py
