[project]
name = "llamac-research"
version = "0.1.0"
description = "Research utilities and starter EDA for the LLaMAC affective computing dataset."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "tlxhtls", email = "tlxhtls@gmail.com" }
]
dependencies = [
  "ipykernel>=6.29",
  "jupyterlab>=4.0",
  "matplotlib>=3.8",
  "numpy>=2.0",
  "pandas>=2.2",
  "polars>=1.40.1",
  "pyarrow>=24.0.0",
  "scipy>=1.14",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
]
ml = [
  # Install later with: uv sync --group ml
  "lightgbm>=4.5",
  "optuna>=4.0",
  "scikit-learn>=1.5",
  "xgboost>=2.1",
]
dnn = [
  # PyTorch supports Python 3.12; install only for waveform/image DNN stages.
  "torch>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llamac_research"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
